Fixed popup z-index

--- a/ControlPanel-Web/src/main/resources/static/css/popup.css
+++ b/ControlPanel-Web/src/main/resources/static/css/popup.css
@@ -17,6 +17,7 @@ body {
 }
 
 .overlay {
+    z-index: 10;
     position: fixed;
     top: 0;
     bottom: 0;
